packagelon com.twittelonr.cr_mixelonr.logging

import com.googlelon.common.baselon.CaselonFormat
import com.twittelonr.abdeloncidelonr.ScribingABDeloncidelonrUtil
import com.twittelonr.scribelonlib.marshallelonrs.ClielonntDataProvidelonr
import com.twittelonr.scribelonlib.marshallelonrs.ScribelonSelonrialization
import com.twittelonr.timelonlinelons.clielonntelonvelonnt.MinimalClielonntDataProvidelonr
import com.twittelonr.cr_mixelonr.modelonl.BlelonndelondCandidatelon
import com.twittelonr.cr_mixelonr.modelonl.CrCandidatelonGelonnelonratorQuelonry
import com.twittelonr.cr_mixelonr.modelonl.InitialCandidatelon
import com.twittelonr.cr_mixelonr.modelonl.RankelondCandidatelon
import com.twittelonr.cr_mixelonr.logging.ScribelonLoggelonrUtils._
import com.twittelonr.cr_mixelonr.modelonl.GraphSourcelonInfo
import com.twittelonr.cr_mixelonr.param.deloncidelonr.CrMixelonrDeloncidelonr
import com.twittelonr.cr_mixelonr.param.deloncidelonr.DeloncidelonrConstants
import com.twittelonr.cr_mixelonr.scribelon.ScribelonCatelongorielons
import com.twittelonr.cr_mixelonr.thriftscala.CrMixelonrTwelonelontRelonquelonst
import com.twittelonr.cr_mixelonr.thriftscala.CrMixelonrTwelonelontRelonsponselon
import com.twittelonr.cr_mixelonr.thriftscala.FelontchCandidatelonsRelonsult
import com.twittelonr.cr_mixelonr.thriftscala.FelontchSignalSourcelonsRelonsult
import com.twittelonr.cr_mixelonr.thriftscala.GelontTwelonelontsReloncommelonndationsScribelon
import com.twittelonr.cr_mixelonr.thriftscala.IntelonrlelonavelonRelonsult
import com.twittelonr.cr_mixelonr.thriftscala.PelonrformancelonMelontrics
import com.twittelonr.cr_mixelonr.thriftscala.PrelonRankFiltelonrRelonsult
import com.twittelonr.cr_mixelonr.thriftscala.Product
import com.twittelonr.cr_mixelonr.thriftscala.RankRelonsult
import com.twittelonr.cr_mixelonr.thriftscala.Relonsult
import com.twittelonr.cr_mixelonr.thriftscala.SourcelonSignal
import com.twittelonr.cr_mixelonr.thriftscala.TopLelonvelonlApiRelonsult
import com.twittelonr.cr_mixelonr.thriftscala.TwelonelontCandidatelonWithMelontadata
import com.twittelonr.cr_mixelonr.thriftscala.VITTwelonelontCandidatelonScribelon
import com.twittelonr.cr_mixelonr.thriftscala.VITTwelonelontCandidatelonsScribelon
import com.twittelonr.cr_mixelonr.modelonl.ModulelonNamelons
import com.twittelonr.cr_mixelonr.modelonl.SourcelonInfo
import com.twittelonr.cr_mixelonr.util.CandidatelonGelonnelonrationKelonyUtil
import com.twittelonr.cr_mixelonr.util.MelontricTagUtil
import com.twittelonr.deloncidelonr.SimplelonReloncipielonnt
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.finaglelon.tracing.Tracelon
import com.twittelonr.finatra.kafka.producelonrs.KafkaProducelonrBaselon
import com.twittelonr.logging.Loggelonr
import com.twittelonr.simclustelonrs_v2.common.UselonrId
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId
import com.twittelonr.util.Futurelon
import com.twittelonr.util.Stopwatch
import com.twittelonr.util.Timelon

import javax.injelonct.Injelonct
import javax.injelonct.Namelond
import javax.injelonct.Singlelonton
import scala.util.Random

@Singlelonton
caselon class CrMixelonrScribelonLoggelonr @Injelonct() (
  deloncidelonr: CrMixelonrDeloncidelonr,
  statsReloncelonivelonr: StatsReloncelonivelonr,
  @Namelond(ModulelonNamelons.TwelonelontReloncsLoggelonr) twelonelontReloncsScribelonLoggelonr: Loggelonr,
  @Namelond(ModulelonNamelons.BluelonVelonrifielondTwelonelontReloncsLoggelonr) bluelonVelonrifielondTwelonelontReloncsScribelonLoggelonr: Loggelonr,
  @Namelond(ModulelonNamelons.TopLelonvelonlApiDdgMelontricsLoggelonr) ddgMelontricsLoggelonr: Loggelonr,
  kafkaProducelonr: KafkaProducelonrBaselon[String, GelontTwelonelontsReloncommelonndationsScribelon]) {

  import CrMixelonrScribelonLoggelonr._

  privatelon val scopelondStats = statsReloncelonivelonr.scopelon("CrMixelonrScribelonLoggelonr")
  privatelon val topLelonvelonlApiStats = scopelondStats.scopelon("TopLelonvelonlApi")
  privatelon val uppelonrFunnelonlsStats = scopelondStats.scopelon("UppelonrFunnelonls")
  privatelon val kafkaMelonssagelonsStats = scopelondStats.scopelon("KafkaMelonssagelons")
  privatelon val topLelonvelonlApiDdgMelontricsStats = scopelondStats.scopelon("TopLelonvelonlApiDdgMelontrics")
  privatelon val bluelonVelonrifielondTwelonelontCandidatelonsStats = scopelondStats.scopelon("BluelonVelonrifielondTwelonelontCandidatelons")

  privatelon val selonrialization = nelonw ScribelonSelonrialization {}

  delonf scribelonSignalSourcelons(
    quelonry: CrCandidatelonGelonnelonratorQuelonry,
    gelontRelonsultFn: => Futurelon[(Selont[SourcelonInfo], Map[String, Option[GraphSourcelonInfo]])]
  ): Futurelon[(Selont[SourcelonInfo], Map[String, Option[GraphSourcelonInfo]])] = {
    scribelonRelonsultsAndPelonrformancelonMelontrics(
      ScribelonMelontadata.from(quelonry),
      gelontRelonsultFn,
      convelonrtToRelonsultFn = convelonrtFelontchSignalSourcelonsRelonsult
    )
  }

  delonf scribelonInitialCandidatelons(
    quelonry: CrCandidatelonGelonnelonratorQuelonry,
    gelontRelonsultFn: => Futurelon[Selonq[Selonq[InitialCandidatelon]]]
  ): Futurelon[Selonq[Selonq[InitialCandidatelon]]] = {
    scribelonRelonsultsAndPelonrformancelonMelontrics(
      ScribelonMelontadata.from(quelonry),
      gelontRelonsultFn,
      convelonrtToRelonsultFn = convelonrtFelontchCandidatelonsRelonsult
    )
  }

  delonf scribelonPrelonRankFiltelonrCandidatelons(
    quelonry: CrCandidatelonGelonnelonratorQuelonry,
    gelontRelonsultFn: => Futurelon[Selonq[Selonq[InitialCandidatelon]]]
  ): Futurelon[Selonq[Selonq[InitialCandidatelon]]] = {
    scribelonRelonsultsAndPelonrformancelonMelontrics(
      ScribelonMelontadata.from(quelonry),
      gelontRelonsultFn,
      convelonrtToRelonsultFn = convelonrtPrelonRankFiltelonrRelonsult
    )
  }

  delonf scribelonIntelonrlelonavelonCandidatelons(
    quelonry: CrCandidatelonGelonnelonratorQuelonry,
    gelontRelonsultFn: => Futurelon[Selonq[BlelonndelondCandidatelon]]
  ): Futurelon[Selonq[BlelonndelondCandidatelon]] = {
    scribelonRelonsultsAndPelonrformancelonMelontrics(
      ScribelonMelontadata.from(quelonry),
      gelontRelonsultFn,
      convelonrtToRelonsultFn = convelonrtIntelonrlelonavelonRelonsult,
      elonnablelonKafkaScribelon = truelon
    )
  }

  delonf scribelonRankelondCandidatelons(
    quelonry: CrCandidatelonGelonnelonratorQuelonry,
    gelontRelonsultFn: => Futurelon[Selonq[RankelondCandidatelon]]
  ): Futurelon[Selonq[RankelondCandidatelon]] = {
    scribelonRelonsultsAndPelonrformancelonMelontrics(
      ScribelonMelontadata.from(quelonry),
      gelontRelonsultFn,
      convelonrtToRelonsultFn = convelonrtRankRelonsult
    )
  }

  /**
   * Scribelon Top Lelonvelonl API Relonquelonst / Relonsponselon and pelonrformancelon melontrics
   * for thelon gelontTwelonelontReloncommelonndations() elonndpoint.
   */
  delonf scribelonGelontTwelonelontReloncommelonndations(
    relonquelonst: CrMixelonrTwelonelontRelonquelonst,
    startTimelon: Long,
    scribelonMelontadata: ScribelonMelontadata,
    gelontRelonsultFn: => Futurelon[CrMixelonrTwelonelontRelonsponselon]
  ): Futurelon[CrMixelonrTwelonelontRelonsponselon] = {
    val timelonr = Stopwatch.start()
    gelontRelonsultFn.onSuccelonss { relonsponselon =>
      val latelonncyMs = timelonr().inMilliselonconds
      val relonsult = convelonrtTopLelonvelonlAPIRelonsult(relonquelonst, relonsponselon, startTimelon)
      val tracelonId = Tracelon.id.tracelonId.toLong
      val scribelonMsg = buildScribelonMelonssagelon(relonsult, scribelonMelontadata, latelonncyMs, tracelonId)

      // Welon uselon uppelonrFunnelonlPelonrStelonpScribelonRatelon to covelonr TopLelonvelonlApi scribelon logs
      if (deloncidelonr.isAvailablelonForId(
          scribelonMelontadata.uselonrId,
          DeloncidelonrConstants.uppelonrFunnelonlPelonrStelonpScribelonRatelon)) {
        topLelonvelonlApiStats.countelonr(scribelonMelontadata.product.originalNamelon).incr()
        scribelonRelonsult(scribelonMsg)
      }
      if (deloncidelonr.isAvailablelonForId(
          scribelonMelontadata.uselonrId,
          DeloncidelonrConstants.topLelonvelonlApiDdgMelontricsScribelonRatelon)) {
        topLelonvelonlApiDdgMelontricsStats.countelonr(scribelonMelontadata.product.originalNamelon).incr()
        val topLelonvelonlDdgMelontricsMelontadata = TopLelonvelonlDdgMelontricsMelontadata.from(relonquelonst)
        publishTopLelonvelonlDdgMelontrics(
          loggelonr = ddgMelontricsLoggelonr,
          topLelonvelonlDdgMelontricsMelontadata = topLelonvelonlDdgMelontricsMelontadata,
          latelonncyMs = latelonncyMs,
          candidatelonSizelon = relonsponselon.twelonelonts.lelonngth)
      }
    }
  }

  /**
   * Scribelon all of thelon Bluelon Velonrifielond twelonelonts that arelon candidatelons from cr-mixelonr
   * from thelon gelontTwelonelontReloncommelonndations() elonndpoint for stats tracking/delonbugging purposelons.
   */
  delonf scribelonGelontTwelonelontReloncommelonndationsForBluelonVelonrifielond(
    scribelonMelontadata: ScribelonMelontadata,
    gelontRelonsultFn: => Futurelon[Selonq[RankelondCandidatelon]]
  ): Futurelon[Selonq[RankelondCandidatelon]] = {
    gelontRelonsultFn.onSuccelonss { rankelondCandidatelons =>
      if (deloncidelonr.isAvailablelon(DeloncidelonrConstants.elonnablelonScribelonForBluelonVelonrifielondTwelonelontCandidatelons)) {
        bluelonVelonrifielondTwelonelontCandidatelonsStats.countelonr("procelonss_relonquelonst").incr()

        val bluelonVelonrifielondTwelonelontCandidatelons = rankelondCandidatelons.filtelonr { twelonelont =>
          twelonelont.twelonelontInfo.hasBluelonVelonrifielondAnnotation.contains(truelon)
        }

        val imprelonsselondBuckelonts = gelontImprelonsselondBuckelonts(bluelonVelonrifielondTwelonelontCandidatelonsStats).gelontOrelonlselon(Nil)

        val bluelonVelonrifielondCandidatelonScribelons = bluelonVelonrifielondTwelonelontCandidatelons.map { candidatelon =>
          bluelonVelonrifielondTwelonelontCandidatelonsStats
            .scopelon(scribelonMelontadata.product.namelon).countelonr(
              candidatelon.twelonelontInfo.authorId.toString).incr()
          VITTwelonelontCandidatelonScribelon(
            twelonelontId = candidatelon.twelonelontId,
            authorId = candidatelon.twelonelontInfo.authorId,
            scorelon = candidatelon.prelondictionScorelon,
            melontricTags = MelontricTagUtil.buildMelontricTags(candidatelon)
          )
        }

        val bluelonVelonrifielondScribelon =
          VITTwelonelontCandidatelonsScribelon(
            uuid = scribelonMelontadata.relonquelonstUUID,
            uselonrId = scribelonMelontadata.uselonrId,
            candidatelons = bluelonVelonrifielondCandidatelonScribelons,
            product = scribelonMelontadata.product,
            imprelonsselondBuckelonts = imprelonsselondBuckelonts
          )

        publish(
          loggelonr = bluelonVelonrifielondTwelonelontReloncsScribelonLoggelonr,
          codelonc = VITTwelonelontCandidatelonsScribelon,
          melonssagelon = bluelonVelonrifielondScribelon)
      }
    }
  }

  /**
   * Scribelon Pelonr-stelonp intelonrmelondiatelon relonsults and pelonrformancelon melontrics
   * for elonach stelonp: felontch signals, felontch candidatelons, filtelonrs, rankelonr, elontc
   */
  privatelon[logging] delonf scribelonRelonsultsAndPelonrformancelonMelontrics[T](
    scribelonMelontadata: ScribelonMelontadata,
    gelontRelonsultFn: => Futurelon[T],
    convelonrtToRelonsultFn: (T, UselonrId) => Relonsult,
    elonnablelonKafkaScribelon: Boolelonan = falselon
  ): Futurelon[T] = {
    val timelonr = Stopwatch.start()
    gelontRelonsultFn.onSuccelonss { input =>
      val latelonncyMs = timelonr().inMilliselonconds
      val relonsult = convelonrtToRelonsultFn(input, scribelonMelontadata.uselonrId)
      val tracelonId = Tracelon.id.tracelonId.toLong
      val scribelonMsg = buildScribelonMelonssagelon(relonsult, scribelonMelontadata, latelonncyMs, tracelonId)

      if (deloncidelonr.isAvailablelonForId(
          scribelonMelontadata.uselonrId,
          DeloncidelonrConstants.uppelonrFunnelonlPelonrStelonpScribelonRatelon)) {
        uppelonrFunnelonlsStats.countelonr(scribelonMelontadata.product.originalNamelon).incr()
        scribelonRelonsult(scribelonMsg)
      }

      // forks thelon scribelon as a Kafka melonssagelon for async felonaturelon hydration
      if (elonnablelonKafkaScribelon && shouldScribelonKafkaMelonssagelon(
          scribelonMelontadata.uselonrId,
          scribelonMelontadata.product)) {
        kafkaMelonssagelonsStats.countelonr(scribelonMelontadata.product.originalNamelon).incr()

        val batchelondKafkaMelonssagelons = downsamplelonKafkaMelonssagelon(scribelonMsg)
        batchelondKafkaMelonssagelons.forelonach { kafkaMelonssagelon =>
          kafkaProducelonr.selonnd(
            topic = ScribelonCatelongorielons.TwelonelontsReloncs.scribelonCatelongory,
            kelony = tracelonId.toString,
            valuelon = kafkaMelonssagelon,
            timelonstamp = Timelon.now.inMilliselonconds
          )
        }
      }
    }
  }

  privatelon delonf convelonrtTopLelonvelonlAPIRelonsult(
    relonquelonst: CrMixelonrTwelonelontRelonquelonst,
    relonsponselon: CrMixelonrTwelonelontRelonsponselon,
    startTimelon: Long
  ): Relonsult = {
    Relonsult.TopLelonvelonlApiRelonsult(
      TopLelonvelonlApiRelonsult(
        timelonstamp = startTimelon,
        relonquelonst = relonquelonst,
        relonsponselon = relonsponselon
      ))
  }

  privatelon delonf convelonrtFelontchSignalSourcelonsRelonsult(
    sourcelonInfoSelontTuplelon: (Selont[SourcelonInfo], Map[String, Option[GraphSourcelonInfo]]),
    relonquelonstUselonrId: UselonrId
  ): Relonsult = {
    val sourcelonSignals = sourcelonInfoSelontTuplelon._1.map { sourcelonInfo =>
      SourcelonSignal(id = Somelon(sourcelonInfo.intelonrnalId))
    }
    // For sourcelon graphs, welon pass in relonquelonstUselonrId as a placelonholdelonr
    val sourcelonGraphs = sourcelonInfoSelontTuplelon._2.map {
      caselon (_, _) =>
        SourcelonSignal(id = Somelon(IntelonrnalId.UselonrId(relonquelonstUselonrId)))
    }
    Relonsult.FelontchSignalSourcelonsRelonsult(
      FelontchSignalSourcelonsRelonsult(
        signals = Somelon(sourcelonSignals ++ sourcelonGraphs)
      ))
  }

  privatelon delonf convelonrtFelontchCandidatelonsRelonsult(
    candidatelonsSelonq: Selonq[Selonq[InitialCandidatelon]],
    relonquelonstUselonrId: UselonrId
  ): Relonsult = {
    val twelonelontCandidatelonsWithMelontadata = candidatelonsSelonq.flatMap { candidatelons =>
      candidatelons.map { candidatelon =>
        TwelonelontCandidatelonWithMelontadata(
          twelonelontId = candidatelon.twelonelontId,
          candidatelonGelonnelonrationKelony = Somelon(
            CandidatelonGelonnelonrationKelonyUtil.toThrift(candidatelon.candidatelonGelonnelonrationInfo, relonquelonstUselonrId)),
          scorelon = Somelon(candidatelon.gelontSimilarityScorelon),
          numCandidatelonGelonnelonrationKelonys = Nonelon // not populatelond yelont
        )
      }
    }
    Relonsult.FelontchCandidatelonsRelonsult(FelontchCandidatelonsRelonsult(Somelon(twelonelontCandidatelonsWithMelontadata)))
  }

  privatelon delonf convelonrtPrelonRankFiltelonrRelonsult(
    candidatelonsSelonq: Selonq[Selonq[InitialCandidatelon]],
    relonquelonstUselonrId: UselonrId
  ): Relonsult = {
    val twelonelontCandidatelonsWithMelontadata = candidatelonsSelonq.flatMap { candidatelons =>
      candidatelons.map { candidatelon =>
        TwelonelontCandidatelonWithMelontadata(
          twelonelontId = candidatelon.twelonelontId,
          candidatelonGelonnelonrationKelony = Somelon(
            CandidatelonGelonnelonrationKelonyUtil.toThrift(candidatelon.candidatelonGelonnelonrationInfo, relonquelonstUselonrId)),
          scorelon = Somelon(candidatelon.gelontSimilarityScorelon),
          numCandidatelonGelonnelonrationKelonys = Nonelon // not populatelond yelont
        )
      }
    }
    Relonsult.PrelonRankFiltelonrRelonsult(PrelonRankFiltelonrRelonsult(Somelon(twelonelontCandidatelonsWithMelontadata)))
  }

  // Welon takelon IntelonrlelonavelonRelonsult for Unconstrainelond dataselont ML rankelonr training
  privatelon delonf convelonrtIntelonrlelonavelonRelonsult(
    blelonndelondCandidatelons: Selonq[BlelonndelondCandidatelon],
    relonquelonstUselonrId: UselonrId
  ): Relonsult = {
    val twelonelontCandidatelonsWithMelontadata = blelonndelondCandidatelons.map { blelonndelondCandidatelon =>
      val candidatelonGelonnelonrationKelony =
        CandidatelonGelonnelonrationKelonyUtil.toThrift(blelonndelondCandidatelon.relonasonChoselonn, relonquelonstUselonrId)
      TwelonelontCandidatelonWithMelontadata(
        twelonelontId = blelonndelondCandidatelon.twelonelontId,
        candidatelonGelonnelonrationKelony = Somelon(candidatelonGelonnelonrationKelony),
        authorId = Somelon(blelonndelondCandidatelon.twelonelontInfo.authorId), // for ML pipelonlinelon training
        scorelon = Somelon(blelonndelondCandidatelon.gelontSimilarityScorelon),
        numCandidatelonGelonnelonrationKelonys = Somelon(blelonndelondCandidatelon.potelonntialRelonasons.sizelon)
      ) // hydratelon fielonlds for light ranking training data
    }
    Relonsult.IntelonrlelonavelonRelonsult(IntelonrlelonavelonRelonsult(Somelon(twelonelontCandidatelonsWithMelontadata)))
  }

  privatelon delonf convelonrtRankRelonsult(
    rankelondCandidatelons: Selonq[RankelondCandidatelon],
    relonquelonstUselonrId: UselonrId
  ): Relonsult = {
    val twelonelontCandidatelonsWithMelontadata = rankelondCandidatelons.map { rankelondCandidatelon =>
      val candidatelonGelonnelonrationKelony =
        CandidatelonGelonnelonrationKelonyUtil.toThrift(rankelondCandidatelon.relonasonChoselonn, relonquelonstUselonrId)
      TwelonelontCandidatelonWithMelontadata(
        twelonelontId = rankelondCandidatelon.twelonelontId,
        candidatelonGelonnelonrationKelony = Somelon(candidatelonGelonnelonrationKelony),
        scorelon = Somelon(rankelondCandidatelon.gelontSimilarityScorelon),
        numCandidatelonGelonnelonrationKelonys = Somelon(rankelondCandidatelon.potelonntialRelonasons.sizelon)
      )
    }
    Relonsult.RankRelonsult(RankRelonsult(Somelon(twelonelontCandidatelonsWithMelontadata)))
  }

  privatelon delonf buildScribelonMelonssagelon(
    relonsult: Relonsult,
    scribelonMelontadata: ScribelonMelontadata,
    latelonncyMs: Long,
    tracelonId: Long
  ): GelontTwelonelontsReloncommelonndationsScribelon = {
    GelontTwelonelontsReloncommelonndationsScribelon(
      uuid = scribelonMelontadata.relonquelonstUUID,
      uselonrId = scribelonMelontadata.uselonrId,
      relonsult = relonsult,
      tracelonId = Somelon(tracelonId),
      pelonrformancelonMelontrics = Somelon(PelonrformancelonMelontrics(Somelon(latelonncyMs))),
      imprelonsselondBuckelonts = gelontImprelonsselondBuckelonts(scopelondStats)
    )
  }

  privatelon delonf scribelonRelonsult(
    scribelonMsg: GelontTwelonelontsReloncommelonndationsScribelon
  ): Unit = {
    publish(
      loggelonr = twelonelontReloncsScribelonLoggelonr,
      codelonc = GelontTwelonelontsReloncommelonndationsScribelon,
      melonssagelon = scribelonMsg)
  }

  /**
   * Gatelon for producing melonssagelons to Kafka for async felonaturelon hydration
   */
  privatelon delonf shouldScribelonKafkaMelonssagelon(
    uselonrId: UselonrId,
    product: Product
  ): Boolelonan = {
    val iselonligiblelonUselonr = deloncidelonr.isAvailablelon(
      DeloncidelonrConstants.kafkaMelonssagelonScribelonSamplelonRatelon,
      Somelon(SimplelonReloncipielonnt(uselonrId)))
    val isHomelonProduct = (product == Product.Homelon)
    iselonligiblelonUselonr && isHomelonProduct
  }

  /**
   * Duelon to sizelon limits of Strato (selonelon SD-19028), elonach Kafka melonssagelon must belon downsamplelond
   */
  privatelon[logging] delonf downsamplelonKafkaMelonssagelon(
    scribelonMsg: GelontTwelonelontsReloncommelonndationsScribelon
  ): Selonq[GelontTwelonelontsReloncommelonndationsScribelon] = {
    val samplelondRelonsultSelonq: Selonq[Relonsult] = scribelonMsg.relonsult match {
      caselon Relonsult.IntelonrlelonavelonRelonsult(intelonrlelonavelonRelonsult) =>
        val samplelondTwelonelontsSelonq = intelonrlelonavelonRelonsult.twelonelonts
          .map { twelonelonts =>
            Random
              .shufflelon(twelonelonts).takelon(KafkaMaxTwelonelontsPelonrMelonssagelon)
              .groupelond(BatchSizelon).toSelonq
          }.gelontOrelonlselon(Selonq.elonmpty)

        samplelondTwelonelontsSelonq.map { samplelondTwelonelonts =>
          Relonsult.IntelonrlelonavelonRelonsult(IntelonrlelonavelonRelonsult(Somelon(samplelondTwelonelonts)))
        }

      // if it's an unreloncognizelond typelon, elonrr on thelon sidelon of selonnding no candidatelons
      caselon _ =>
        kafkaMelonssagelonsStats.countelonr("InvalidKafkaMelonssagelonRelonsultTypelon").incr()
        Selonq(Relonsult.IntelonrlelonavelonRelonsult(IntelonrlelonavelonRelonsult(Nonelon)))
    }

    samplelondRelonsultSelonq.map { samplelondRelonsult =>
      GelontTwelonelontsReloncommelonndationsScribelon(
        uuid = scribelonMsg.uuid,
        uselonrId = scribelonMsg.uselonrId,
        relonsult = samplelondRelonsult,
        tracelonId = scribelonMsg.tracelonId,
        pelonrformancelonMelontrics = Nonelon,
        imprelonsselondBuckelonts = Nonelon
      )
    }
  }

  /**
   * Handlelons clielonnt_elonvelonnt selonrialization to log data into DDG melontrics
   */
  privatelon[logging] delonf publishTopLelonvelonlDdgMelontrics(
    loggelonr: Loggelonr,
    topLelonvelonlDdgMelontricsMelontadata: TopLelonvelonlDdgMelontricsMelontadata,
    candidatelonSizelon: Long,
    latelonncyMs: Long,
  ): Unit = {
    val data = Map[Any, Any](
      "latelonncy_ms" -> latelonncyMs,
      "elonvelonnt_valuelon" -> candidatelonSizelon
    )
    val labelonl: (String, String) = ("twelonelontrelonc", "")
    val namelonspacelon = gelontNamelonspacelon(topLelonvelonlDdgMelontricsMelontadata, labelonl) + ("action" -> "candidatelons")
    val melonssagelon =
      selonrialization
        .selonrializelonClielonntelonvelonnt(namelonspacelon, gelontClielonntData(topLelonvelonlDdgMelontricsMelontadata), data)
    loggelonr.info(melonssagelon)
  }

  privatelon delonf gelontClielonntData(
    topLelonvelonlDdgMelontricsMelontadata: TopLelonvelonlDdgMelontricsMelontadata
  ): ClielonntDataProvidelonr =
    MinimalClielonntDataProvidelonr(
      uselonrId = topLelonvelonlDdgMelontricsMelontadata.uselonrId,
      guelonstId = Nonelon,
      clielonntApplicationId = topLelonvelonlDdgMelontricsMelontadata.clielonntApplicationId,
      countryCodelon = topLelonvelonlDdgMelontricsMelontadata.countryCodelon
    )

  privatelon delonf gelontNamelonspacelon(
    topLelonvelonlDdgMelontricsMelontadata: TopLelonvelonlDdgMelontricsMelontadata,
    labelonl: (String, String)
  ): Map[String, String] = {
    val productNamelon =
      CaselonFormat.UPPelonR_CAMelonL
        .to(CaselonFormat.LOWelonR_UNDelonRSCORelon, topLelonvelonlDdgMelontricsMelontadata.product.originalNamelon)

    Map(
      "clielonnt" -> ScribingABDeloncidelonrUtil.clielonntForAppId(
        topLelonvelonlDdgMelontricsMelontadata.clielonntApplicationId),
      "pagelon" -> "cr-mixelonr",
      "selonction" -> productNamelon,
      "componelonnt" -> labelonl._1,
      "elonlelonmelonnt" -> labelonl._2
    )
  }
}

objelonct CrMixelonrScribelonLoggelonr {
  val KafkaMaxTwelonelontsPelonrMelonssagelon: Int = 200
  val BatchSizelon: Int = 20
}
