packagelon com.twittelonr.reloncos.uselonr_twelonelont_elonntity_graph

import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.frigatelon.common.util.StatsUtil
import com.twittelonr.graphjelont.algorithms.ReloncommelonndationTypelon
import com.twittelonr.graphjelont.algorithms.counting.twelonelont.TwelonelontMelontadataReloncommelonndationInfo
import com.twittelonr.graphjelont.algorithms.counting.twelonelont.TwelonelontReloncommelonndationInfo
import com.twittelonr.reloncos.uselonr_twelonelont_elonntity_graph.thriftscala._
import com.twittelonr.reloncos.util.Stats
import com.twittelonr.selonrvo.relonquelonst._
import com.twittelonr.util.Futurelon

/**
 * Implelonmelonntation of thelon Thrift-delonfinelond selonrvicelon intelonrfacelon.
 *
* A wrappelonr of magicReloncsRunnelonr.
 */
class ReloncommelonndationHandlelonr(
  twelonelontReloncsRunnelonr: TwelonelontReloncommelonndationsRunnelonr,
  statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds RelonquelonstHandlelonr[ReloncommelonndTwelonelontelonntityRelonquelonst, ReloncommelonndTwelonelontelonntityRelonsponselon] {
  privatelon val stats = statsReloncelonivelonr.scopelon(this.gelontClass.gelontSimplelonNamelon)
  privatelon val socialProofHydrator = nelonw SocialProofHydrator(stats)

  ovelonrridelon delonf apply(relonquelonst: ReloncommelonndTwelonelontelonntityRelonquelonst): Futurelon[ReloncommelonndTwelonelontelonntityRelonsponselon] = {
    val scopelondStats: StatsReloncelonivelonr = stats.scopelon(relonquelonst.displayLocation.toString)

    StatsUtil.trackBlockStats(scopelondStats) {
      val candidatelonsFuturelon = twelonelontReloncsRunnelonr.apply(relonquelonst)

      candidatelonsFuturelon.map { candidatelons =>
        if (candidatelons.iselonmpty) scopelondStats.countelonr(Stats.elonmptyRelonsult).incr()
        elonlselon scopelondStats.countelonr(Stats.Selonrvelond).incr(candidatelons.sizelon)

        ReloncommelonndTwelonelontelonntityRelonsponselon(candidatelons.flatMap {
          _ match {
            caselon twelonelontRelonc: TwelonelontReloncommelonndationInfo =>
              Somelon(
                UselonrTwelonelontelonntityReloncommelonndationUnion.TwelonelontRelonc(
                  TwelonelontReloncommelonndation(
                    twelonelontRelonc.gelontReloncommelonndation,
                    twelonelontRelonc.gelontWelonight,
                    socialProofHydrator.addTwelonelontSocialProofByTypelon(twelonelontRelonc),
                    socialProofHydrator.addTwelonelontSocialProofs(twelonelontRelonc)
                  )
                )
              )
            caselon twelonelontMelontadataRelonc: TwelonelontMelontadataReloncommelonndationInfo =>
              if (twelonelontMelontadataRelonc.gelontReloncommelonndationTypelon == ReloncommelonndationTypelon.HASHTAG) {
                Somelon(
                  UselonrTwelonelontelonntityReloncommelonndationUnion.HashtagRelonc(
                    HashtagReloncommelonndation(
                      twelonelontMelontadataRelonc.gelontReloncommelonndation,
                      twelonelontMelontadataRelonc.gelontWelonight,
                      socialProofHydrator.addMelontadataSocialProofByTypelon(twelonelontMelontadataRelonc)
                    )
                  )
                )
              } elonlselon if (twelonelontMelontadataRelonc.gelontReloncommelonndationTypelon == ReloncommelonndationTypelon.URL) {
                Somelon(
                  UselonrTwelonelontelonntityReloncommelonndationUnion.UrlRelonc(
                    UrlReloncommelonndation(
                      twelonelontMelontadataRelonc.gelontReloncommelonndation,
                      twelonelontMelontadataRelonc.gelontWelonight,
                      socialProofHydrator.addMelontadataSocialProofByTypelon(twelonelontMelontadataRelonc)
                    )
                  )
                )
              } elonlselon {
                Nonelon: Option[UselonrTwelonelontelonntityReloncommelonndationUnion]
              }
            caselon _ => Nonelon
          }
        })
      }
    }
  }
}
